MDEV-23134 SEGV in dict_load_table_one during restart after server crash

- dict_load_table_one() doesn't handle the scenario where clustered index
is not loaded when DICT_ERR_IGNORE_INDEX_ROOT mode is set.